updating welcome screen

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Seja bem-vindo(a)!</h1>
+<p>Lucas Jaeger</p>
+
+<p>A soma é: <%= 1 + 1 %></p>
+
+<p>Seu nome de trás pra frente é: <%= "Lucas".reverse %></p>
+
+<% ax = "minha variavel a" %>
+<p>Imprimindo a variavel a: <strong><%= ax %></strong></p>
+
+<p>A data de hoje é: <%= Date.today %></p>
