update at welcome screen

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,7 @@
-<h1>Seja bem-vindo(a)!</h1>
-<p>Lucas Jaeger</p>
+<h1>Seja bem-vindo (a)!</h1>
 
-<p>A soma é: <%= 1 + 1 %></p>
-
-<p>Seu nome de trás pra frente é: <%= "Lucas".reverse %></p>
-
-<% ax = "minha variavel a" %>
-<p>Imprimindo a variavel a: <strong><%= ax %></strong></p>
-
-<p>A data de hoje é: <%= Date.today %></p>
+<ul>
+    <li>
+        <%= link_to "Cadastro de Moedas", coins_path %>
+    </li>
+</ul>
